# PythonDataScienceHandbook

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 04.07-Customizing-Colorbars.ipynb  07.00-Introduction-to-Deep-Learning.ipynb  07.01-Neural-Network-Fundamentals.ipynb  07.02-Modern-Data-Science-Tools.ipynb  07.03-Production-ML-Systems.ipynb  Index.ipynb  helpers_05_08.py
tools/: add_navigation.py  fix_kernelspec.py  validate_notebooks.py
